# my-chat-app

./: .gitignore  CLAUDE.md  DESIGNSYSTEM.md  LEARNING_ROADMAP_APP.md  LEARNING_ROADMAP_WORKER.md  docker-compose.yml  my-chat-app.code-workspace
.zed/: settings.json
app/: .gitignore  .prettierrc  MVP_IMPLEMENTATION_GUIDE.md  components.json  eslint.config.js  eslint.config.ts  index.html  orval.config.ts  package-lock.json  package.json  style-dictionary.config.js  svelte.config.js  tokens.json  tsconfig.json  tsconfig.node.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite-env.d.ts  vite.config.ts
app/app/: test-naming.ts
app/prisma/: schema.prisma
app/src/: App.tsx  app.css  app.d.ts  hooks.client.ts  hooks.server.ts  index.css  main.tsx  theme.css
app/src/api/: chats.ts  documents.ts  messages.ts
app/src/components/: GlobalErrorHandler.tsx
app/src/hooks/: useChatEvents.ts
app/src/pages/: ChatPage.tsx  DocumentsPage.tsx  HomePage.tsx
app/src/routes/: +layout.server.ts  +layout.svelte  +page.svelte
app/src/stores/: chat.ts  navbar.ts
app/src/utils/: unreachable.ts
common/: package.json
common/src/types/: chat.ts
planning/agent/: PLAN.md
server/: .gitignore  eslint.config.ts  orval.config.ts  package-lock.json  package.json  tsconfig.json
server/prisma/: schema.prisma
server/scripts/: export-openapi.ts
server/src/: app.module.ts  main.ts
server/src/chat/: chat.controller.ts  chat.dto.ts  chat.module.ts  chat.repository.ts  chat.service.ts
server/src/common/: common.module.ts  event-bus.service.ts
server/src/document/: document.controller.ts  document.dto.ts  document.module.ts  document.repository.ts  document.service.ts
server/src/message/: message.controller.ts  message.dto.ts  message.module.ts  message.repository.ts  message.service.ts
worker/: .env.example  .gitignore  MVP_IMPLEMENTATION_GUIDE.md  dependencies.py  environment.yml  main.py  pyproject.toml  pyrightconfig.json  ruff.toml
worker/business/: agent.py  chat.py  chat_business.py  ingestion.py  parsers.py  retriever.py  tool_registry.py
worker/business/rag/: __init__.py  ingestion.py  query.py  retriever.py  summary.py
worker/business/rag/chunker/: __init__.py  base.py  factory.py  fixed_chunker.py  parent_child_chunker.py  semantic_chunker.py
worker/business/tools/: __init__.py  base.py  rag_tool.py  tool_registry.py
worker/config/: __init__.py  constants.py  settings.py
worker/controllers/: chat_controller.py  document_controller.py
worker/routers/: chat.py  documents.py
worker/schemas/: chat.py  documents.py
worker/scripts/: export_openapi.py
worker/services/: agent.py  callback_service.py  tool_registry.py  web_fetcher.py
worker/services/embedding/: __init__.py  base.py  factory.py  gemini.py  ollama.py
worker/services/llm/: __init__.py  base.py  constants.py  factory.py  gemini.py  mock.py  ollama.py  types.py
worker/services/rag/: __init__.py  chunker.py  embeddings.py  ingestion.py  parsers.py  retriever.py  vector_store.py
worker/tools/: base.py  rag_tool.py
(+132 files in other folders)
