[project]
name = "worker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.121.2",
    "uvicorn>=0.38.0",
    "httpx>=0.27.0",
    "google-genai>=1.57.0",
    "pydantic-settings>=2.7.0",
    "python-dotenv>=1.0.0",
    "typing-extensions>=4.15.0",
    "ollama>=0.4.0",
    "qdrant-client>=1.12.0",
    "pymupdf>=1.25.0",
    "beautifulsoup4>=4.13.0",
    "python-multipart>=0.0.20",
]

[tool.poe.tasks]
start = "uvicorn main:app --reload"
openapi = "python scripts/export_openapi.py"
lint = "ruff check ."
format = "ruff format ."
check = "basedpyright ."

[dependency-groups]
dev = [
    "poethepoet>=0.37.0",
    "ruff>=0.9.4",
    "basedpyright>=1.27.1",
]

[tool.basedpyright]
typeCheckingMode = "recommended"
pythonVersion = "3.11"
include = ["."]
exclude = ["**/__pycache__", "**/myenv", "**/.venv", "**/venv"]
venvPath = "."
venv = ".venv"
reportUnusedVariable = "warning"
reportUnusedImport = "warning"
reportMissingTypeStubs = false
reportUnusedCallResult = false
reportExplicitAny = false  # Allow Any type for flexible schemas
reportAny = false  # Allow Any in kwargs and flexible parameters
reportUnknownVariableType = false  # Third-party packages without stubs
